CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-07 03:48:39
+lastsearch = 2024-08-07 09:54:46
 
 [shopee.vn]
 match = 56.2%%
@@ -279,7 +279,7 @@ url = https://www.christies.com/en/lot/lot-5751621
 [leflair.com]
 match = -131.2%%
 title = Nước rửa chân khử mùi hôi, ngăn ngừa nấm HAKINI...
-url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798?srsltid=AfmBOopWX6f872xCMTi_aiCx5Xuv4ud269qJV2fAlVCIcvLVdpr-ZU_7
+url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798
 
 [olm.vn]
 match = -93.8%%
@@ -295,4 +295,14 @@ url = https://www.vietjack.com/de-kiem-tra-lop-2/bai-tap-cuoi-tuan-tieng-viet-lo
 match = -37.5%%
 title = dtac network area nationwide
 url = https://www.dtac.co.th/en/network/coverage.html
+
+[kilala.vn]
+match = -118.8%%
+title = Bài tập đơn giản khắc phục tình trạng “cổ rùa”
+url = https://kilala.vn/lam-dep/bai-tap-don-gian-khac-phuc-tinh-trang-co-rua.html
+
+[snnptnt.bacgiang.gov.vn]
+match = -62.5%%
+title = Rùa tai đỏ và mối nguy hại của chúng
+url = https://snnptnt.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/Mx8P0qYgvZWv/content/rua-tai-o-va-moi-nguy-hai-cua-chung
 
