--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-07 02:37:35
+lastsearch = 2024-08-07 09:48:09
 
 [www.diepxuan.com]
-match = -20.0%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = -13.3%%
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [www.htlight.vn]
 match = -26.7%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -166.7%%
-title = 🔴 Tin Bão Mới Sáng Ngày 04/08_XH Bão Số 3 Rất ...
-url = https://www.youtube.com/watch?v=qmz5QCQEMJs
+match = -93.3%%
+title = TIN TÔN GIÁO, SÁNG THỨ TƯ 07/08/2024
+url = https://www.youtube.com/watch?v=o0pRUWhRktM
 
 [htlight.vn]
 match = -26.7%%
@@ -112,9 +112,9 @@ title = vb777 ️【WW88.game】Casino Trực Tuyến: Khi Châu Á ...
 url = http://www.tuyensinh.dau.edu.vn/rna/2024-06-16-happyvn com.xhtm
 
 [m.facebook.com]
-match = -6.7%%
-title = Giao Thông thời VNCH
-url = https://m.facebook.com/media/set/?set=a.623598701078282&s=12
+match = -140.0%%
+title = Thiên Nhai Minh Nguyệt Đao VNG Official Group
+url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/490601960245471/
 
 [denledsvlight.com]
 match = -53.3%%
@@ -215,4 +215,9 @@ url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuan-bc15.
 match = 20.0%%
 title = Đèn led chiếu cây 15w
 url = https://thanhdatled.com/den-led-chieu-cay-15w.html
+
+[hachi.com.vn]
+match = -100.0%%
+title = Đèn LED Trồng Cây Nội Thất CX50W - Hachi
+url = https://hachi.com.vn/den-led-trong-cay-noi-that-hc50w/
 
