--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-07 06:58:26
+lastsearch = 2024-08-07 10:01:04
 
 [scholar.google.com]
 match = -43.8%%
@@ -72,9 +72,9 @@ title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc
 url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
 
 [baomoi.com]
-match = -150.0%%
-title = Khán giả đang cần những bộ phim vui vẻ, lạc quan
-url = https://baomoi.com/khan-gia-dang-can-nhung-bo-phim-vui-ve-lac-quan-c49803543.epi
+match = -175.0%%
+title = Những tính năng ẩn của iOS 18 không được Apple tiết lộ
+url = https://baomoi.com/nhung-tinh-nang-an-cua-ios-18-khong-duoc-apple-tiet-lo-c49834622.epi
 
 [ivymoda.com]
 match = -193.8%%
