--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-07 01:53:31
+lastsearch = 2024-08-07 09:50:37
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -365,4 +365,9 @@ url = https://www.econ.umd.edu/
 match = 8.3%%
 title = Pamela J Lein
 url = https://profiles.ucdavis.edu/pamela.lein
+
+[www.ess.uci.edu]
+match = -358.3%%
+title = Jin- Yi Yu, Ph.D. Department of Earth System Science - UCI ESS
+url = https://www.ess.uci.edu/~yu/PDF/Yu.cv.web.2-25-2024.pdf
 
