--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 09:16:43
+lastsearch = 2024-08-07 09:59:01
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -35.3%%
-title = Hoa Person for The 4th of July
-url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
+match = -11.8%%
+title = HOA fined me for this #hoa
+url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
 
 [www.steadily.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnoj92fW&sig=ACfU3U0ZhDe_ogsnKbvS9k6G-RI7hmTKCA&hl=en&sa=X&ved=2ahUKEwjrzq-BmOGHAxWjweYEHSU6NTUQ6AF6BAgeEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnold2hR&sig=ACfU3U0gB-LJO9Yp2Ob3UU8fMKilWZ5E1Q&hl=en&sa=X&ved=2ahUKEwiz04S98eGHAxVZmokEHXSLN6sQ6AF6BAgfEAM
 
 [www.house.gov]
 match = 11.8%%
@@ -700,4 +700,9 @@ url = https://www.nike.com/vn/w/sale-3yaep
 match = -194.1%%
 title = John Lewis & Partners | Department Store | Home, Fashion ...
 url = https://www.johnlewis.com/
+
+[myfwc.com]
+match = -164.7%%
+title = Guidelines for Designing and Managing Florida Ponds ...
+url = https://myfwc.com/conservation/you-conserve/recreation/pond-management/
 
