--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-07 04:55:43
+lastsearch = 2024-08-07 10:02:25
 
 [everon.online]
 match = 15.4%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@cuongkhii/video/7250838547173870853
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVZMrCYH&sig=ACfU3U3nURu1m-sZWXA6JZI-WIMkrw6Fow&hl=en&sa=X&ved=2ahUKEwjpz8HsmeGHAxV8ElkFHQhEJm8Q6AF6BAgYEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVZOuJ-D&sig=ACfU3U1p60VWT32dFIt7hZv7myEeo8p1cw&hl=en&sa=X&ved=2ahUKEwjkoZye8uGHAxWJC3kGHabfNAwQ6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -26.9%%
