--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-07 06:26:17
+lastsearch = 2024-08-07 09:48:31
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Modern viền lụa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-modern-vien-lua.html
 
 [leflair.com]
 match = 6.9%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -27.6%%
-title = chiếu điều hòa mát lạnh chiếu cao su non 5d bọc nệm mền ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-boc-nem-men-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1918879701.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
@@ -37,9 +37,9 @@ title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
 url = https://shopee.vn/chiếu-điều-hòa-cao-su-non-tencel-latex-5D-mềm-mịn-mướt-mát-size-160x200-180x200-i.1063512412.22353005341
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [kyoryo.vn]
 match = 20.7%%
