--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-07 02:35:29
+lastsearch = 2024-08-07 09:47:04
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -38,13 +38,13 @@ url = https://moon.vn/hoi-dap/mot-con-lac-don-co-chieu-dai-l-duoc-treo-duoi-gam-
 
 [vietjack.com]
 match = -193.8%%
-title = Cách tính chu kì, tần số của Con lắc lò xo (hay, chi tiết)
-url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.jsp
+title = Cách tìm năng lượng dao động, tìm lực căng dây của con ...
+url = https://vietjack.com/vat-ly-lop-12/nang-luong-con-lac-don-va-luc-cang-day.jsp
 
 [olm.vn]
 match = -187.5%%
-title = Một con lắc đơn có chiều dài l m được treo dưới gầm cầu ...
-url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-l-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-o-01.321451557569
+title = Một con lắc đơn có chiều dài 3 m được treo dưới gầm cầu ...
+url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-3-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-0.280805632788
 
 [www.vietjack.com]
 match = -193.8%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -75.0%%
-title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
-url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.conggiao.org]
 match = -68.8%%
@@ -314,12 +314,12 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOopZ5vec8L82P6m1lbcOQwdKzfFrgb37ibxQG3yQSoEEQKr0PBWO
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOorJfZc8m0Wy9tNBPX1jcLyYx9AFnpcrydxXUfBfR73xe_P2TkZe
 
 [yato.vn]
 match = -175.0%%
 title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
+url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885?srsltid=AfmBOoovKvjoZ6KBtO1M0yNQkQ14nx1QvWBD08rBmNR2tl2r36PiUgg7
 
 [baothaibinh.com.vn]
 match = -200.0%%
