--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-07 05:00:27
+lastsearch = 2024-08-07 09:55:28
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -44,12 +44,12 @@ url = https://www.sendo.vn/chieu-nhua.htm
 [www.facebook.com]
 match = 63.2%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOopLQo91qwjVDxvD6UHMZWXp-gV6hl9aBIhJNNS_lcGg0CQGZiCR
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
