--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-07 09:11:12
+lastsearch = 2024-08-07 10:02:06
 
 [bedding.vn]
 match = -123.1%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -261.5%%
-title = Expert Profile: Je Hyeong Bahk - UC Research Directory
-url = https://researchdirectory.uc.edu/p/bahkjg
+match = -292.3%%
+title = Chong Ahn - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/ahnch
 
 [thegioinem.com]
 match = -230.8%%
