--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-07 06:25:56
+lastsearch = 2024-08-07 09:53:42
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -100.0%%
@@ -260,4 +260,9 @@ url = https://noithathanoi.net.vn/bo-giuong-tu-phong-ngu-gn401-18-id4318.html
 match = 0.0%%
 title = 
 url = https://vuanem.com/blog/kich-thuoc-giuong-ngu-vo-chong.html
+
+[mocshop.com.vn]
+match = -35.0%%
+title = GIƯỜNG GẤP THÔNG MINH 18 - Mộc shop
+url = https://mocshop.com.vn/mau-giuong-thong-minh-2022/giuong-gap-thong-minh-18/
 
