CI images update

--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-07 09:20:35
+lastsearch = 2024-08-07 10:31:11
 
 [shopee.vn]
-match = 12.9%%
-title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước)
-url = https://shopee.vn/chiếu-nhựa-thái-bình-tiện-dụng-(đủ-mọi-kích-thước)-i.1134304416.23562686178
+match = 19.4%%
+title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
+url = https://shopee.vn/phuong97tb
 
 [tiki.vn]
 match = 48.4%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa Thái Bình GT 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 
 [m.facebook.com]
-match = -6.5%%
-title = SANG NHƯỢNG + MUA BÁN TIỆM QUÁN Ở CHLB ĐỨC
-url = https://m.facebook.com/groups/1110093975748337/posts/7873087172782283/
+match = 9.7%%
+title = Hội Sales Quảng Bình 73 | Chào cả nhà
+url = https://m.facebook.com/groups/251202215303340/posts/858519194571636/
 
 [trangvangvietnam.com]
 match = 20.0%%
