--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-07 05:36:34
+lastsearch = 2024-08-07 10:25:00
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -205.9%%
-title = Labour and Life of the People - Volume 1 - Google Books Result
-url = https://books.google.com/books?id=u-QrGtuleCsC&pg=RA1-PT4&lpg=RA1-PT4&dq=man+in+hoa+dep+16&source=bl&ots=WFetfmGpCc&sig=ACfU3U0gDf6shtjVpZDV4j6dkpY4TIHHug&hl=en&sa=X&ved=2ahUKEwiu9_zp6OCHAxUkI0QIHcJ8JoEQ6AF6BAgZEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ7woAy1_&sig=ACfU3U0STtMsb90Gg9tL0a0Asms1juw4Fg&hl=en&sa=X&ved=2ahUKEwiuqryk9-GHAxVfD1kFHe1wA_kQ6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
