--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-07 04:57:06
+lastsearch = 2024-08-07 10:18:22
 
 [www.mantubung.com]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
 url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
 
 [easydream.vn]
-match = -61.1%%
-title = mùng chụp tự bung gấp gọn cao cấp easy dream
-url = https://easydream.vn/man-mung-chup-dinh-rong-tu-bung-gap-gon-danh-cho-nguoi-lon-134-15.html
+match = -111.1%%
+title = TOP 5 MÙNG CHỤP TỰ BUNG - MÀN CHỤP CAO CẤP EASY ...
+url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
 
 [www.mungtubung.com]
 match = -116.7%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -111.1%%
-title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
-url = https://mungmocmien.com/collections/mung-chup-em-be
+match = 17.6%%
+title = Mùng chụp tự bung
+url = https://mungmocmien.com/collections/mung-chup-tu-bung
 
 [tiki.vn]
 match = -77.8%%
