--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-07 09:09:48
+lastsearch = 2024-08-07 10:28:04
 
 [demxanh.com]
-match = -69.6%%
-title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html
+match = -47.8%%
+title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
+url = https://demxanh.com/ruot-goi-olympia.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
