--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-07 03:22:33
+lastsearch = 2024-08-07 10:19:23
 
 [shopee.vn]
 match = -76.2%%
@@ -12,19 +12,19 @@ title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
-match = -100.0%%
-title = Thảm (mền) nỉ nhung trải sàn trải giường 3 lớp 1.6 x 2m ...
-url = https://www.lazada.vn/products/tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-tham-men-ni-nhung-trai-san-trai-giuong-3-lop-16-x-2m-i247710313-s322513280.html?&search=0?mp=1&scm=1007.16389.286994.0&clickTrackInfo=d057a3b7-3c13-40cd-9a87-2d282cfd27bf__247710313__12734__shop__224806__0.79995346__0.79995346__0.0__0.0__0.0__0.79995346__1__null__null__null__null__null__null____389000.0__0.4183341902313624__5.0__1__226268.0__16001,20001,23008,23048,24083,53901,67235,70973,72910,73238,74591,74595,78085,78155,80012,80015,82817,85607,88271,88274,88708,89297,89312,89491,90649,91254,92232,92271,95266,103150,104601,105538,105816,107335,110577,113326,115496__null__null__null__3650.16544_3650.16540_955.3632__null__13426__null__0.0__0.0________null__null
+match = -85.7%%
+title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html
 
 [tiki.vn]
 match = -38.1%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+title = Tham trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham trải giường
 
 [flexhouse.vn]
-match = -104.8%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -42.9%%
+title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
+url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [noithatminhkhoi.com]
 match = -57.1%%
