--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-07 04:34:29
+lastsearch = 2024-08-07 10:17:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [dongahome.vn]
-match = -42.3%%
-title = Bộ chăn ga gối sông hồng urban SH_UC23 026 - Giá tốt nhất
-url = https://dongahome.vn/chan-ga-goi-song-hong-sh_uc23-026
+match = 11.5%%
+title = Bộ chăn ga gối sông hồng urban SH_UC23 031
+url = https://dongahome.vn/chan-ga-goi-song-hong-urban-sh_uc23-031
 
 [demhong.vn]
 match = -42.3%%
@@ -112,9 +112,9 @@ title = Cung cấp chăn ga gối Sông Hồng dòng Home mã H18-056 cao cấp
 url = https://demthienkim.com/chan-ga-goi-h18-056/
 
 [vietnamese.alibaba.com]
-match = -50.0%%
-title = Bộ Chăn Ga Gối Đệm Ai Cập Bộ Ga Giường Và Chăn Bông Bán ...
-url = https://vietnamese.alibaba.com/product-detail/1000--Thread--Count--Egyptian--cotton--sheets-60272612581.html
+match = -53.8%%
+title = Heniemo Nhà Máy Cung Cấp Bộ 3 Chiếc Chăn Ga Gối Đệm ...
+url = https://vietnamese.alibaba.com/product-detail/Heniemo--Factory--Supply--120gsm--seersucker--3pcs-1600667461930.html
 
 [m.facebook.com]
 match = 48.0%%
