--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-07 06:53:41
+lastsearch = 2024-08-07 10:18:00
 
 [www.dem365.vn]
 match = -81.0%%
@@ -37,9 +37,9 @@ title = Tại sao chặn phao cần 4 hạt chặn? Và trải nghiệm thực t
 url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 
 [www.lazada.vn]
-match = -76.2%%
-title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/
+match = -33.3%%
+title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
