--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 09:46:43
+lastsearch = 2024-08-07 10:20:47
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopEwUS1nTofcHOGgyVIuajH3yJCKgLriGnmts9Tc1lOxivcLf-V
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -31.0%%
-title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+match = 51.7%%
+title = Chiếu điều hòa cao su non Tencel ghi
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -27,9 +27,9 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [changagoidemdep.vn]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -10.3%%
+title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [khodem.vn]
 match = 55.2%%
@@ -49,7 +49,7 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOor4_aR2-ozaEicioiSr4Bauq26iXFcAw-mjlCuog_7DBaRDqrhF
 
 [shopee.vn]
 match = -27.6%%
