--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-07 09:47:46
+lastsearch = 2024-08-07 10:28:46
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOopZeGpFuF2UkT8PzQBSxKf2pi_XM1g0l5ubSVkWHLFyuKYgUYcM
 
 [noithatdaithanh.vn]
 match = -47.6%%
