--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-07 09:47:04
+lastsearch = 2024-08-07 10:24:39
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -38,8 +38,8 @@ url = https://moon.vn/hoi-dap/mot-con-lac-don-co-chieu-dai-l-duoc-treo-duoi-gam-
 
 [vietjack.com]
 match = -193.8%%
-title = Cách tìm năng lượng dao động, tìm lực căng dây của con ...
-url = https://vietjack.com/vat-ly-lop-12/nang-luong-con-lac-don-va-luc-cang-day.jsp
+title = Cách tính chu kì, tần số của Con lắc lò xo (hay, chi tiết)
+url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.jsp
 
 [olm.vn]
 match = -187.5%%
@@ -217,9 +217,9 @@ title = Khách sạn rẻ gần Redebas, Đức - Nhiều ưu đãi hấp dẫn
 url = https://www.booking.com/city/de/redebas.vi.html
 
 [m.facebook.com]
-match = -25.0%%
-title = Hà Nội Riviu - Riviu.vn
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1471932070137191/
+match = -193.8%%
+title = Tôi Là Dân Quận 12 | Sáng mai lên xe chiều t6 e trả đơn
+url = https://m.facebook.com/groups/477065866263029/posts/1567764360526502/
 
 [antoanthanhpho.vn]
 match = -68.8%%
@@ -314,12 +314,12 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOorJfZc8m0Wy9tNBPX1jcLyYx9AFnpcrydxXUfBfR73xe_P2TkZe
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
 
 [yato.vn]
 match = -175.0%%
 title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885?srsltid=AfmBOoovKvjoZ6KBtO1M0yNQkQ14nx1QvWBD08rBmNR2tl2r36PiUgg7
+url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
 
 [baothaibinh.com.vn]
 match = -200.0%%
