--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-07 05:35:32
+lastsearch = 2024-08-07 10:27:22
 
 [www.lazada.vn]
-match = -94.4%%
-title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -44.4%%
+title = Nem Cao Su Non Day Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/nem-cao-su-non-day/
 
 [m.facebook.com]
 match = -161.1%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -77.8%%
-title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
 match = -72.2%%
