--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-07 05:49:16
+lastsearch = 2024-08-07 10:14:34
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Thảm trải giường lông cừu TLC 06 - Hà Nội
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -59.1%%
-title = Thảm nỉ nhung trải giường GC ( 1 Ga + 2 vỏ gối ...
-url = https://www.lazada.vn/products/tham-ni-nhung-trai-giuong-gc-1-ga-2-vo-goi-nam-i1022858922.html
+match = -113.6%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -37,9 +37,9 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatthuynguyet.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [tiki.vn]
-match = -36.4%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+match = 0.0%%
+title = Mua Drap giường chống thấm 180 x 200 cm
+url = https://tiki.vn/drap-giuong-chong-tham-180-x-200-cm-p139192110.html
 
 [gusofa.vn]
 match = -81.8%%
