CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 05:44:18
+lastsearch = 2024-08-07 10:43:37
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -111.8%%
-title = HOA harassing elderly blind man : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/1dujoxc/hoa_harassing_elderly_blind_man/
+match = -100.0%%
+title = Old man threw hands at HOA meeting : r/fuckHOA
+url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
 
 [www.quora.com]
 match = -200.0%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -211.8%%
-title = HOA's will lose their minds once these laws pass in Florida ...
-url = https://www.youtube.com/watch?v=NZ3-PwSjSBo
+match = -123.5%%
+title = Như Quỳnh - Xuân Đẹp Làm Sao (Thanh Sơn) PBN 101
+url = https://www.youtube.com/watch?v=QcBvdLl0L1c
 
 [www.gsa.gov]
 match = -44.4%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6FwDz65&sig=ACfU3U2VKkg5YbaXwfDDlWqz4OEMVqmRCQ&hl=en&sa=X&ved=2ahUKEwjjvq_FuOGHAxWnAjQIHYCFNPYQ6AF6BAgnEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=YfANAAAAQAAJ&pg=PA7&lpg=PA7&dq=man+in+hoa+dep+18&source=bl&ots=iNPzZeg1Ll&sig=ACfU3U09sAUUawBO_4xZh9dexfMz992u8Q&hl=en&sa=X&ved=2ahUKEwiE-PK4--GHAxVtD0QIHUbcCdAQ6AF6BAg4EAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -640,4 +640,9 @@ url = https://www.hnammobile.com/tin-tuc/chup-anh-voi-hoa.26261.html
 match = -117.6%%
 title = Choáng ngợp màn pháo hoa đẹp mê hoặc trên sông Hàn
 url = https://tienphong.vn/choang-ngop-man-phao-hoa-dep-me-hoac-tren-song-han-post1644704.tpo
+
+[ffl.ifas.ufl.edu]
+match = -188.2%%
+title = model covenants, conditions and restrictions for new and ...
+url = https://ffl.ifas.ufl.edu/media/fflifasufledu/docs/CCRs_Sept-20-2010_final.pdf
 
