--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-07 06:41:50
+lastsearch = 2024-08-07 10:46:43
 
 [chieutruc.info]
-match = -100.0%%
-title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
-url = https://chieutruc.info/chieu-coi-xuan-hoa/
+match = -63.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
 match = -36.4%%
@@ -32,9 +32,9 @@ title = Sự phát triển của thai nhi tuần 18
 url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
-match = -95.5%%
-title = LẤY CHỒNG TUỔI 18 - TẬP 1 FULL | Thanh Trúc, Băng Di ...
-url = https://www.youtube.com/watch?v=LOOlpShtakg
+match = -109.1%%
+title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
+url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
 match = 45.5%%
