--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-07 00:52:01
+lastsearch = 2024-08-07 10:32:13
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+match = -100.0%%
+title = Bảng Giá【 Đệm Bông Ép Everon Kích Thước 1m6x1m95 ...
+url = https://everonvn.com.vn/everon/1896/dem-bong-ep-everon-1m6x1m95
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -77,9 +77,9 @@ title = Đệm Bông Ép Everon
 url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 
 [everon.com]
-match = -40.0%%
-title = Bảng giá đệm bông ép Everon 180 (1.8m) x 200
-url = https://everon.com/tin-san-pham/dem-bong-ep-everon-180x200-n227.html
+match = -115.0%%
+title = Top 7 loại nệm bông ép gấp 3 giá rẻ chính hãng ...
+url = https://everon.com/top-7-loai-nem-bong-ep-gap-3-gia-re-chinh-hang-everon-moi-nhat-2022
 
 [khodem.vn]
 match = -130.0%%
@@ -115,4 +115,19 @@ url = https://twitter.com/onyeama_joseph/status/1804981125917642919
 match = -50.0%%
 title = NỆM PE HÀN QUỐC CAO CẤP I NEMGIASI.VN
 url = https://nemgiasi.vn/nem-pe-korea-day-9cm
+
+[everonkorea.com]
+match = -5.0%%
+title = Chăn ga gối đệm Everon - Hà Nội
+url = https://everonkorea.com/everon/
+
+[demre.com.vn]
+match = 55.0%%
+title = Đệm Everon 1m8 x 2m x 5F
+url = https://demre.com.vn/dem-everon-1m8-x-2m-x-5f
+
+[thegioidemviet.vn]
+match = 10.0%%
+title = Nệm Cao Su Bông Kim Cương
+url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 
