CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-07 05:38:20
+lastsearch = 2024-08-07 10:49:16
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -32,9 +32,9 @@ title = Discovery of a novel third-generation EGFR inhibitor and ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWMPZvZ9&sig=ACfU3U2vWeHl1QMySxS6PN-rZkY9OGDkaw&hl=en&sa=X&ved=2ahUKEwjEqd-at-GHAxU5IjQIHZM8JRUQ6AF6BAgZEAM
+match = -223.5%%
+title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiWQFnH0E&sig=ACfU3U1-mBLIo_ItnZyyraiqxZTn9NczAQ&hl=en&sa=X&ved=2ahUKEwjBu8Ta_OGHAxXVEFkFHd00MaUQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
