--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-07 08:01:32
+lastsearch = 2024-08-07 10:56:13
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -122.2%%
+title = Mama Silas Buffet: Wide Variety, Affordable Prices
+url = https://www.tiktok.com/@linatipelu/video/7355076922889522450?lang=en
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -195,4 +195,9 @@ url = https://www.nguoi-viet.com/nvtv-doi-song/nvtv-nguoi-viet-bep-viet/nem-nuon
 match = 0.0%%
 title = 
 url = https://www.sunrun.com/utility/ca/pge/how-read-your-pge-nem-bill
+
+[cooking.nytimes.com]
+match = 0.0%%
+title = 
+url = https://cooking.nytimes.com/recipes/1019032-nem-nuong-vietnamese-sausage
 
