--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-07 10:27:22
+lastsearch = 2024-08-07 10:44:50
 
 [www.lazada.vn]
 match = -44.4%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -138.9%%
+title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
+url = https://www.tiktok.com/@50motbua/video/7367416773156539664
 
 [vi.wikipedia.org]
 match = -27.8%%
