--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-07 04:15:56
+lastsearch = 2024-08-07 10:50:00
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 6.7%%
+title = Gojong of Korea
+url = https://en.wikipedia.org/wiki/Gojong_of_Korea
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 10.0%%
-title = Uyen Ninh Fruit Art Mom
-url = https://www.tiktok.com/discover/uyen-ninh-fruit-art-mom
+match = 0.0%%
+title = Nancy Parker Watertown Ny
+url = https://www.tiktok.com/discover/nancy-parker-watertown-ny
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -60.0%%
+title = USD TO ZAR TODAY AND FORECAST TOMORROW ...
+url = https://30rates.com/usd-to-zar-today-forecast-dollar-to-rand
 
 [www.akc.org]
 match = -45.0%%
