--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:20:03
 lastsearch = 2024-08-07 10:42:15
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 42.4%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -62,9 +62,9 @@ title = Chia sẻ những địa chỉ mua chiếu trúc tăm uy tín ở thành
 url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin-o-thanh-pho-ho-chi-minh-k57.html
 
 [vongxepsaigon.vn]
-match = -30.3%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
+match = 3.0%%
+title = Chiếu trúc chiếu tre 1m6 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m6-hat-nau-den-hang-tot-loai-1-2/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
@@ -78,8 +78,8 @@ url = https://khonemthangloi.com/san-pham/chieu-truc-lan-lan-khong-vien-mau-den/
 
 [www.toangiaphuc.vn]
 match = 54.8%%
-title = Chiếu trúc hạt nâu viền vải 1m6
-url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m6.html
+title = Chiếu trúc hạt nâu viền vải 1m8
+url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m8.html
 
 [ru9.vn]
 match = -18.2%%
@@ -165,4 +165,9 @@ url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2
 match = 0.0%%
 title = Địa chỉ bán chiếu trúc tại TP. Hồ Chí Minh (Sài Gòn)
 url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-tai-tp-ho-chi-minh-sai-gon/
+
+[dms.gov.vn]
+match = -48.5%%
+title = Thanh Hóa: Giám sát tiêu hủy hơn 15 tấn hàng hóa là tang vật ...
+url = https://dms.gov.vn/tin-chi-tiet/-/chi-tiet/thanh-hoa-giam-sat-tieu-huy-hon-15-tan-hang-hoa-la-tang-vat-bi-tich-thu-do-vi-pham-hanh-chinh-86627-1.html
 
