--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-07 06:33:37
+lastsearch = 2024-08-07 11:00:43
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -238.5%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -338.5%%
+title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
+url = https://www.youtube.com/watch?v=wwH3mdjbKac
 
 [www.regmovies.com]
 match = -215.4%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
-url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
