--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-07 10:26:02
+lastsearch = 2024-08-07 10:45:33
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = The 5th edition of the World Health Organization ...
 url = https://pubmed.ncbi.nlm.nih.gov/35732829/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.4%%
+title = Lien Claimants
+url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
 match = 5.3%%
