CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-07 04:27:17
+lastsearch = 2024-08-07 11:33:40
 
 [everon.online]
 match = 12.0%%
@@ -109,7 +109,7 @@ url = https://www.dulichhoanmy.com/new/tour-du-lich-han-quoc-30-4/
 [monre.gov.vn]
 match = 0.0%%
 title = ThongBao - All Items
-url = https://monre.gov.vn/Portal/Lists/ThongBao/AllItems.aspx?Paged=TRUE&PagedPrev=TRUE&p_ID=394&PageFirstRow=3331&&View={1182C8FF-C7D3-4EC0-8021-828AED57B78B}
+url = https://monre.gov.vn/Portal/Lists/ThongBao/AllItems.aspx?Paged=TRUE&PagedPrev=TRUE&p_ID=394&PageFirstRow=6031&&View={1182C8FF-C7D3-4EC0-8021-828AED57B78B}
 
 [www.diepxuan.com]
 match = 96.0%%
@@ -375,4 +375,14 @@ url = https://plo.vn/loat-cau-hoi-an-ninh-bao-ve-yeu-nhan-tu-vu-ong-trump-bi-ban
 match = 9.1%%
 title = Art Hotel Commercianti
 url = https://www.vn.kayak.com/Bologna-Hotels-Art-Hotel-Commercianti.21243.ksp
+
+[baodautu.vn]
+match = -48.0%%
+title = Sắp vận hành Tổ hợp Hóa dầu Long Sơn 5,4 tỷ USD
+url = https://baodautu.vn/dau-tu-xay-dung-cao-toc-gia-nghia-chon-thanh-25540-ty-dong-sap-van-hanh-to-hop-hoa-dau-long-son-54-ty-usd-d221569.html
+
+[www.vietnam.vn]
+match = -36.0%%
+title = Đầu tư xây dựng cao tốc Gia Nghĩa - Lạng Sơn
+url = https://www.vietnam.vn/langson/dau-tu-xay-dung-cao-toc-gia-nghia/
 
