--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-07 10:45:42
+lastsearch = 2024-08-07 11:31:15
 
 [ninhouse.vn]
 match = -161.5%%
 title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOorzRQ7YV8mMLP7jIW7mbdLmpCInYIXlUE7lrz_-UKVLZr2mSLO9
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -253.8%%
 title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từng ...
-url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai?srsltid=AfmBOopj3dpggXU4FZa9_RCIdcc9WX21HsqYtAnWfM5yHA0u4tsyvCJy
+url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [www.reddit.com]
 match = -230.8%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -176.9%%
-title = vỏ gối ôm lụa giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối ôm lụa&urlold=vo-goi-om-nhieu-mau-lua-chon-hang-chat-luong-kh-chon-mau-de-lai-ghi-chu/5257249332101810992/877968015750663345/ 
+match = -115.4%%
+title = Áo gối nằm (đôi) mẫu đẹp- Được chọn mẫu
+url = https://shopee.vn/Áo-gối-nằm-(đôi)-mẫu-đẹp-Được-chọn-mẫu-i.18452594.20233541354
 
 [songhong.info]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -38.5%%
-title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-tim/?srsltid=AfmBOoqdf-5w2kqKK6aF7dwpRNuC2wj8RDgLCu4nAKd3ISTj81I80Dkw
+match = -284.6%%
+title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
+url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
 
 [flexhouse.vn]
 match = -207.7%%
