--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-07 06:56:26
+lastsearch = 2024-08-07 11:21:01
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+match = 17.2%%
+title = chiếu nhựa giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu nhựa
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -13.8%%
 title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOopPEKrSIREB2KODEOrASaC_m9nYQyFVTpmorj6gLUP2fgMCe7VH
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
 
 [tiki.vn]
 match = -13.8%%
@@ -32,9 +32,9 @@ title = Chiếu Nhựa Thái Lan
 url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 24.1%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
