--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-07 10:41:53
+lastsearch = 2024-08-07 11:17:09
 
 [everonvn.com.vn]
-match = -114.3%%
-title = Bộ Everon Es1804 - Esmeranda - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/606/bo-everon-es1804
+match = -61.9%%
+title = Bảng giá bán lẻ Ga chun Everon Ep1834 - Rose
+url = https://everonvn.com.vn/everon/704/ga-chun-everon-ep1834-rose
 
 [everonhanoi.vn]
 match = -23.8%%
