CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -13,13 +13,13 @@ url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
 match = -32.0%%
-title = Bộ chăn bốn mùa Hoa Ngọt Ngào - ESM24015 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
-match = 28.0%%
-title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOoqytGRVP_7qedvECvtAB5azTlzLr5rLB2iw0ov1qCM-gzhxXItc
+match = -8.0%%
+title = Chăn bốn mùa Everon Es-1802 giảm giá 40%%
+url = https://everonvn.com.vn/everon/2393/chan-bon-mua-es-1802?srsltid=AfmBOopNKjc3ZDjJRO18wGes4sUYz3mWFdKrVEw9e-8xj8Bh0ldd0-do
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -100.0%%
-title = Vở Bài Tập Tiếng Việt Lớp 2 | Ôn Tập Giữa Học Kì 2 | Tuần 27 ...
-url = https://www.youtube.com/watch?v=3c3xQJ1BOgM
+match = -80.0%%
+title = Hào Khí Việt Nam ♫ Quý Dương ♫ Việt Nam ơi, giống hùng ...
+url = https://www.youtube.com/watch?v=whphnvJAYkQ
 
 [bdshanoi.com.vn]
 match = -4.0%%
