--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-07 03:30:33
+lastsearch = 2024-08-07 11:36:13
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,9 +12,9 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = 32.3%%
-title = Chăn ga gối Singapore đệm tròn CIRCLE18
-url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
+match = 38.7%%
+title = Chăn ga gối Singapore lụa 5 món L5M18
+url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
 
 [songhongonline.vn]
 match = 50.0%%
