--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-07 09:20:12
+lastsearch = 2024-08-07 11:37:57
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 [www.lazada.vn]
 match = -53.6%%
 title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
-url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html?srsltid=AfmBOoo5ZEEJueAfu-LWwMLBhmEbPGw9e3mrLQmW2sN64eQCLuPme1FU
+url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
 match = 11.5%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -60.7%%
 title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOoowFfGEbIq0iJn0cLJGaSF3gUDm1oRJf7L_N-l5rCtNN0fcTnCg
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
 match = -42.9%%
