--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-07 05:01:31
+lastsearch = 2024-08-07 11:42:49
 
 [hoa18.com]
-match = -87.5%%
-title = Sản phẩm
-url = https://hoa18.com/shop/page/8
+match = -126.3%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -22,9 +22,9 @@ title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
 url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -110.5%%
-title = Bóng đèn Eurosuper - 🎄 TRANG HOÀNG GIÁNG SINH ...
-url = https://www.facebook.com/photo.php?fbid=741433624679263&set=a.636087441880549&type=3&locale=en_GB
+match = -47.4%%
+title = Hoa18 Tuyển Dụng | Ho Chi Minh City
+url = https://www.facebook.com/hoa18tuyendung/
 
 [vietnambiz.vn]
 match = -94.7%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -126.3%%
-title = 18 Bó Hoa 1 Đầu Hoa Nhân Tạo Mộc Lan Hoa Posy Trang ...
-url = https://shopee.vn/18-Bó-Hoa-1-Đầu-Hoa-Nhân-Tạo-Mộc-Lan-Hoa-Posy-Trang-Trí-Sân-Vườn-Nhà-i.1009786017.24677640621
+match = -121.1%%
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
@@ -330,4 +330,9 @@ url = https://metruyenchu.com.vn/trong-sinh-nam-2000-thanh-mai-giao-hoa-18-tuoi
 match = -36.8%%
 title = Bình Hoa 18 Ngũ Sắc Kim Kê Phú Quý
 url = https://cuongduyen.vn/binh-hoa-18-ngu-sac-kim-ke-phu-quy-p-881
+
+[www.brt.vn]
+match = -110.5%%
+title = Câu chuyện văn hóa 18/5/2024 | Chiếu phim lưu động
+url = https://www.brt.vn/cau-chuyen-van-hoa/cau-chuyen-van-hoa-1852024-chieu-phim-luu-dong-gan-ket-hoc-sinh-voi-lich-su
 
