--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-07 06:38:24
+lastsearch = 2024-08-07 11:39:22
 
 [shopee.vn]
 match = -17.4%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = 34.8%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -69.6%%
+title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
+url = https://www.sendo.vn/chieu-coi-thai-binh.htm
 
 [trangvangvietnam.com]
 match = 21.7%%
