--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-07 11:00:43
+lastsearch = 2024-08-07 11:35:52
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -160.0%%
-title = Svara
-url = https://en.wikipedia.org/wiki/Svara
+match = 0.0%%
+title = Iron meteorite
+url = https://en.wikipedia.org/wiki/Iron_meteorite
 
 [www.facebook.com]
 match = -61.5%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -338.5%%
-title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
-url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
+match = -330.8%%
+title = Ni(4-tBustb)3: A Robust 16-Electron Ni(0) Olefin Complex for ...
+url = https://pubs.acs.org/doi/10.1021/acs.organomet.0c00485
 
 [www.postercompliance.com]
 match = -207.7%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = -92.3%%
-title = Ginny & Georgia (TV Series 2021
-url = https://www.imdb.com/title/tt10813940/
+match = -223.1%%
+title = Ore no imouto ga konna ni kawaii wake ga nai (2010)
+url = https://www.imdb.com/title/tt1751305/
 
 [ottawabraves.com]
 match = -292.3%%
