--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-07 06:00:43
+lastsearch = 2024-08-07 11:49:04
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -90,4 +90,9 @@ url = https://demluxury.com.vn/san-pham/dem-cao-su-tong-hop-elan/
 match = 23.1%%
 title = NỆM FOAM ALOE VERA ELASTIC
 url = https://nemkimcuong.vn/mienbac/vi/san-pham/nem-foam-aloe-vera-elastic/
+
+[www.facebook.com]
+match = 3.1%%
+title = NỆM FOAM COSY DREAM - GIÁ TẠI KHO CHỈ TỪ 1.550 ...
+url = https://www.facebook.com/vanxuanvietnam/videos/nệm-𝐅𝐎𝐀𝐌-𝐂𝐎𝐒𝐘-𝐃𝐑𝐄𝐀𝐌-giá-tại-kho-chỉ-từ-1550000đ-mua-hàng-tại-kho-giá-không-phải-/846080903640602/
 
