CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-07 03:34:57
+lastsearch = 2024-08-07 11:49:10
 
 [hk.linkedin.com]
-match = 7.7%%
-title = Coco Chan - Innity
-url = https://hk.linkedin.com/in/coco-chan-63ba63169
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -38.5%%
@@ -27,8 +27,8 @@ title = Coco Lee
 url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
-match = -246.2%%
-title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
+match = -200.0%%
+title = That Mama: Coco Chan, Founder Of Voltage PR ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -112,9 +112,9 @@ title = ABC Network - ABC.com
 url = https://abc.com/
 
 [www.scmp.com]
-match = 9.1%%
-title = Athena Chan
-url = https://www.scmp.com/author/athena-chan
+match = -284.6%%
+title = South China Morning Post: Breaking China, Asia, HK News ...
+url = https://www.scmp.com/asia
 
 [www.facebook.com]
 match = -384.6%%
