--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-07 11:26:23
+lastsearch = 2024-08-07 11:56:03
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -60.0%%
-title = Let's try sour mango from @Fruit Riot ...
-url = https://www.tiktok.com/@snickolas/video/7393700044731387178
+match = -145.0%%
+title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
+url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
 
 [www.imdb.com]
 match = 0.0%%
@@ -435,4 +435,9 @@ url = https://www.timebie.com/std/korea.php?q=12
 match = -60.0%%
 title = Stocks Slump on US Economic Growth Risks
 url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
+
+[www.republic-online.com]
+match = -130.0%%
+title = Danish PM attack suspect says doesn't recall hitting her
+url = https://www.republic-online.com/news/national_news/danish-pm-attack-suspect-says-doesnt-recall-hitting-her/article_1e2619da-d8ba-5114-93fd-6d037f5eb7d2.html
 
