--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-07 06:42:30
+lastsearch = 2024-08-07 11:59:27
 
 [www.diepxuan.com]
 match = 18.8%%
@@ -38,8 +38,8 @@ url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
 match = -206.2%%
-title = Huda beauty lipstick shade ‘buttercup’ thank me later ...
-url = https://www.tiktok.com/@megxfenwick/video/7321757021164932384
+title = #lipstick #foryou #foryoupage #fyp #meccamaxima #nars ...
+url = https://www.tiktok.com/@saramakeup.jpeg/video/6999173807848148226
 
 [archiveofourown.org]
 match = -137.5%%
@@ -255,4 +255,9 @@ url = https://www.dmrw859.com/blog/vljjrwrj-233/
 match = -143.8%%
 title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - nwgm300.com
 url = https://www.nwgm300.com/shop/vljjrwrj-233/
+
+[kaiyun-tiyu66.com]
+match = -218.8%%
+title = dental clinic near burjuman - queens medical center burjuman
+url = https://kaiyun-tiyu66.com/blog/fehxeygu-14/
 
