--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-07 05:21:26
+lastsearch = 2024-08-07 11:45:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -146.7%%
-title = BRGMart - ☀️𝗛𝗘̣̂ 𝗧𝗛𝗢̂́𝗡𝗚 𝗕𝗔́𝗡 𝗟𝗘̉ 𝗕𝗥𝗚 𝗥𝗘𝗧𝗔𝗜𝗟 - ...
-url = https://www.facebook.com/photo.php?fbid=2221498034823753&id=1515183965455167&set=a.1547878702185693
+match = 20.0%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
