--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -7,19 +7,19 @@ lastopen = 2024-07-01 00:11:36
 lastsearch = 2024-08-07 11:33:52
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
+match = 23.4%%
+title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [demxanh.com]
 match = 27.9%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqtC7y3ocJvclMik4K8T_H90UUGpLHSbBjMUTlVBYhyJQRLSVxc
 
 [nemragoi.com]
 match = 37.9%%
@@ -38,8 +38,8 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.h
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [everonvn.com.vn]
 match = 19.1%%
