--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-07 11:28:29
+lastsearch = 2024-08-07 11:45:25
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -13,13 +13,13 @@ url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -104.5%%
-title = 2 giường chống thấm nước Bìa co giãn thoáng khí Vỏ bọc ...
-url = https://www.lazada.vn/products/2-giuong-chong-tham-nuoc-bia-co-gian-thoang-khi-vo-boc-nem-cho-phong-khach-boc-nem-cho-nu-hoang-vua-kich-thuoc-doi-160x200-i2361347002.html
+match = -113.6%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [www.sendo.vn]
 match = 4.5%%
