--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-07 10:38:50
+lastsearch = 2024-08-07 11:59:06
 
 [fsapartners.ed.gov]
-match = -45.0%%
-title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+match = -60.0%%
+title = 2023-2024 Federal School Code List Q1
+url = https://fsapartners.ed.gov/sites/default/files/2022-10/2324FedSchoolCodeList.xlsx
 
 [finaid.org]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Neal Benowitz, MD
 url = https://profiles.ucsf.edu/neal.benowitz
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -10.0%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -87,8 +87,8 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -85.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
 url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
@@ -307,9 +307,9 @@ title = WE AIN'T CRAZY!
 url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 
 [profiles.stanford.edu]
-match = -30.0%%
-title = Ramsey Cheung - Stanford Profiles
-url = https://profiles.stanford.edu/ramsey-cheung
+match = -25.0%%
+title = Kevin Schulman - Stanford Profiles
+url = https://profiles.stanford.edu/kevin-schulman
 
 [publichealth.lacounty.gov]
 match = -155.0%%
