CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-07 11:35:52
+lastsearch = 2024-08-07 12:31:16
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -720,4 +720,9 @@ url = https://tunighthawks.com/sports/womens-flag-football/stats/2024/ottawa-uni
 match = -284.6%%
 title = Debby updates: Storm made landfall as Category 1 hurricane
 url = https://www.nbcnews.com/news/weather/live-blog/hurricane-debby-live-updates-landfall-florida-big-bend-rcna165111
+
+[www.fcc.navy.mil]
+match = -253.8%%
+title = U.S. Fleet Cyber Command / Commander, U.S. 10th Fleet
+url = https://www.fcc.navy.mil/
 
