--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 12:23:54
+lastsearch = 2024-08-07 12:37:48
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -11.8%%
-title = HOA fined me for this #hoa
-url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
+match = -35.3%%
+title = Hoa Person for The 4th of July
+url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
 
 [www.steadily.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdofcc-gV&sig=ACfU3U1FwvN6IBWVVNSqepzwrRtBs8tCrA&hl=en&sa=X&ved=2ahUKEwiC0KnukeKHAxVWMlkFHVBtAOsQ6AF6BAgyEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdofcdZjY&sig=ACfU3U3A_36ufFIJE1sq7xYIWCBnQiGXxQ&hl=en&sa=X&ved=2ahUKEwjw1-X7lOKHAxWtF1kFHZLFA9YQ6AF6BAgXEAM
 
 [www.house.gov]
 match = 11.8%%
