--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-07 11:33:52
+lastsearch = 2024-08-07 12:43:26
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -19,7 +19,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 [demxanh.com]
 match = 27.9%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqtC7y3ocJvclMik4K8T_H90UUGpLHSbBjMUTlVBYhyJQRLSVxc
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -32,8 +32,8 @@ title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
 url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+match = 48.9%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27 - Điệp Xuân
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
