--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-07 09:06:23
+lastsearch = 2024-08-07 12:33:17
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -104,7 +104,7 @@ url = https://www.dol.gov/agencies/ofccp/debarred-list
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Category:Military_units_and_formations_of_the_United_States_Marine_Corps_in_the_Vietnam_War
+url = https://en.wikipedia.org/wiki/Bruno_Hochmuth
 
 [www.johnknoop.com]
 match = 5.6%%
