--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-07 03:12:06
+lastsearch = 2024-08-07 12:34:58
 
 [demxanh.com]
 match = 27.6%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 31.0%%
-title = Chiếu Điều Hòa Cao Su Non Dâu Thỏ Xám 160x200 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-dau-tho-xam-160x200-180x200cm-phamuyen56-i1861397442.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 34.5%%
