--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-07 06:55:01
+lastsearch = 2024-08-07 12:33:37
 
 [demre.com.vn]
 match = 61.1%%
@@ -14,7 +14,7 @@ url = https://demre.com.vn/chieu-nhua-160x200
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+url = https://www.facebook.com/chieunhuathailan/
 
 [kyoryo.vn]
 match = 12.0%%
@@ -32,9 +32,9 @@ title = Chiếu Nhựa Gấp đôi Giá Tốt T04/2024
 url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 
 [www.diepxuan.com]
-match = 40.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 52.0%%
+title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [demxanh.com]
 match = -12.0%%
@@ -80,4 +80,9 @@ url = https://www.maihuyencorp.com/
 match = -4.0%%
 title = Chung cư nhà xã hội - Âu Cơ - Hoà Khánh
 url = https://m.facebook.com/groups/661270174478229/posts/1521060601832511/
+
+[demviethome.vn]
+match = -20.0%%
+title = Chiếu điều hòa latex C01 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c01/
 
