--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-07 11:48:24
+lastsearch = 2024-08-07 12:47:38
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoo2zYzwK5CTKcmrc2wfjYtJXHH3rAIQAJgolR_m1aqthuHbRwJT
+match = 17.9%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -29,7 +29,7 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 [demxanh.com]
 match = 7.1%%
 title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html?srsltid=AfmBOopcfRb3jpCWnZ7Id-QoBeMAGXyqY37IIKCCtyxDSjkrFJxbDM7s
+url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html
 
 [stevematuro.com]
 match = -39.3%%
