--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-07 11:19:16
+lastsearch = 2024-08-07 12:41:22
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
@@ -32,9 +32,9 @@ title = Nệm Bông Ép Everon Vải Gấm
 url = https://suongtuyet.com/nem-bong-ep-everon
 
 [demxanh.com]
-match = -75.0%%
-title = Đệm bông ép Hàn Quốc Everon vỏ gấm chính hãng
-url = https://demxanh.com/dem-bong-ep-han-quoc-everon.html
+match = -110.0%%
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất 2024
+url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [everon365.vn]
 match = 16.7%%
@@ -47,8 +47,8 @@ title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -65.0%%
-title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
+match = -130.0%%
+title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
 url = https://demqueensweet.com/
 
 [www.lazada.vn]
