--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-07 10:50:00
+lastsearch = 2024-08-07 12:39:15
 
 [en.wikipedia.org]
-match = 6.7%%
-title = Gojong of Korea
-url = https://en.wikipedia.org/wiki/Gojong_of_Korea
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -60.0%%
-title = USD TO ZAR TODAY AND FORECAST TOMORROW ...
-url = https://30rates.com/usd-to-zar-today-forecast-dollar-to-rand
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
