--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-07 05:50:58
+lastsearch = 2024-08-07 12:36:27
 
 [www.tui.co.uk]
-match = -120.0%%
-title = City Breaks and Short Breaks 2024 / 2025
-url = https://www.tui.co.uk/holidays/city-breaks
+match = -40.0%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
 match = 0.0%%
