--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-08-07 09:19:51
+lastsearch = 2024-08-07 12:31:56
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopNXFx9sMolKt7xP3p2EuIiTO4Aph2mfk8sZEaH3cmVnibhmCPE
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [community.goodsam.com]
 match = -62.5%%
